--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,11 @@
   "author": "Krish Virani",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
