--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,13 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.13.2",
     "react": "^19.2.3",
+    "react-cookie": "^8.0.1",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.10.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
