--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^9.0.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^9.0.1"
+    "passport-local-mongoose": "^9.0.1",
+    "yahoo-finance2": "^3.11.2"
   }
 }
